- Fixed Graphics tint value not being set on startup
- Fixed UiContainerRenderTree always set to dirty
- Fixed RepeatableNinePatch not repeating correctly when using TextureRegion
- Fixed UI button up/down controller events triggering when controller is disabled
- Fixed NPE when resetting navigation with no navigation elements configured

[1.4.9]
- Fix @PostDeserialize not being invoked for nested objects

[1.4.8]
- Fix UiContainer not clearing active action element
- Fix Rectangle returning 0,0 as its center

[1.4.7]
- Graphics can now draw TiledDrawable instances
- Added RepeatedNinePatch which repeats instead of stretches
- UI element backgrounds can now set backgroundMode to "repeat" or "stretch"

[1.4.6]
- Reduce float array allocations in Polygon#setVertices
- Added ScreenBasedGame#getScreenManager and ScreenManager#getGameScreens

[1.4.5]
- Added Shape#add and Shape#subtract methods for modifying position
- QuadTree implementations can now specify a minimum quad size
- Added Positionable#moveTowards for easier movement logic
- Added Positionable#getDistanceTo(x,y)

[1.4.4]
- Added additional methods to geometry classes
-- Shape#getCenterX + Shape#getCenterY
-- Shape#scale
-- Shape#setRadius
-- Polygon#isEquilateral
-- LineSegment#getLength
- Added methods to preset singletons and prototypes for dependency injection
- Added @PostInject annotation to trigger methods after dependency injection
- @Autowired dependencies now also inject into super classes

[1.4.3]
- Fix UiContainer blocking keyUp/buttonUp events when it did not accept the original keyDown/buttonDown event

[1.4.2]
- Added TiledMap#getObjectGroups() method
- Added additional getProperties() methods to Tiled classes

[1.4.1]
- Added TiledCollisionMapper method to get objects by type
- Added DispersedIntervalEntitySystem

[1.4.0]
- Performance improvements to Polygon class
- Added @PostDeserialize annotation to trigger methods after deserialising from xml/json
- Added Graphics#drawBitmapFontCache